[gd_scene load_steps=8 format=3 uid="uid://bfwde8pm32ahm"]

[ext_resource type="Script" path="res://Welt/Start_Menue/start_menue.gd" id="1_j38ne"]
[ext_resource type="Texture2D" uid="uid://d4bvoelmcyjy7" path="res://Minigame1/Background_1.png" id="2_k2pf6"]
[ext_resource type="Texture2D" uid="uid://cviesfy3xnig0" path="res://Images/Mooneten.png" id="3_13emr"]
[ext_resource type="Texture2D" uid="uid://8cpaq3gcfs20" path="res://Minigame1/Rakete_an.png" id="3_70rxe"]
[ext_resource type="Texture2D" uid="uid://chvkehfinf0j" path="res://Minigame2/asteroid_grey.png" id="6_bpifs"]
[ext_resource type="Texture2D" uid="uid://c24lsh16am6o0" path="res://Images/generatedtext.png" id="7_de57x"]
[ext_resource type="Texture2D" uid="uid://2f17bkx8kduv" path="res://Minigame1/schuss.png" id="7_vkhpp"]

[node name="Start_Menue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j38ne")

[node name="Background1" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(160, 90)
scale = Vector2(0.333333, 0.333333)
texture = ExtResource("2_k2pf6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -108.0
offset_right = 121.0
offset_bottom = -7.0
grow_vertical = 0

[node name="Fortsetzen" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
text = "Fortsetzen"

[node name="Neues Spiel" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Neues Spiel"

[node name="Impressum" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Impressum"

[node name="Rakete" type="Sprite2D" parent="."]
position = Vector2(278, 125)
rotation = -0.71733
scale = Vector2(1, 0.967)
texture = ExtResource("3_70rxe")

[node name="Mooneten" type="Sprite2D" parent="."]
position = Vector2(234, 24)
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_13emr")

[node name="Generatedtext" type="Sprite2D" parent="."]
modulate = Color(0.796078, 0.00392157, 0.372549, 1)
self_modulate = Color(1, 0.627451, 1, 1)
position = Vector2(114.25, 40)
scale = Vector2(0.799652, 0.815789)

[node name="AsteroidGrey" type="Sprite2D" parent="."]
position = Vector2(299, 20)
scale = Vector2(0.5, 0.528)
texture = ExtResource("6_bpifs")

[node name="Schuss" type="Sprite2D" parent="."]
position = Vector2(222, 65)
rotation = -0.760964
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_vkhpp")

[node name="Generatedtext2" type="Sprite2D" parent="."]
position = Vector2(114, 36)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_de57x")

[connection signal="pressed" from="VBoxContainer/Fortsetzen" to="." method="_on_fortsetzen_pressed"]
[connection signal="pressed" from="VBoxContainer/Neues Spiel" to="." method="_on_neues_spiel_pressed"]
[connection signal="pressed" from="VBoxContainer/Impressum" to="." method="_on_impressum_pressed"]
